--- a/style.css
+++ b/style.css
@@ -225,7 +225,7 @@ top: -2.2rem;
     .menu ul{
     background-color: rgb(201, 199, 198);
     width: 100%;
-    height: 55vh;
+    height: 80vh;
         position: absolute;
         top: -100%;
         left: 0%;
@@ -275,7 +275,7 @@ font-size: 1.2rem;
 }
   #click:checked ~.menu ul{
  
-    top: -2%;
+    top: -1%;
 
 }
 
@@ -290,7 +290,7 @@ font-size: 1.2rem;
         
     }
     .menu ul{
-    gap: 6rem;}
+    gap: 3rem;}
    .menu ul li a{
     font-size: 2rem;
     
@@ -315,7 +315,8 @@ font-size: 1.2rem;
   
     .por{
     position: absolute;
-    top: 18rem;
+    top: 21rem;
+    left: 4.1vw;
     }}
    
 
@@ -331,7 +332,7 @@ font-size: 1.2rem;
   }
   .por{
   position: absolute;
-    top: 35%;
+    top: 39%;
   }
  
    
