--- a/style.css
+++ b/style.css
@@ -225,7 +225,7 @@ top: -2.2rem;
     .menu ul{
     background-color: rgb(201, 199, 198);
     width: 100%;
-    height: 70vh;
+    height: 80vh;
         position: absolute;
         top: -100%;
         left: 0%;
@@ -315,7 +315,8 @@ font-size: 1.2rem;
   
     .por{
     position: absolute;
-    top: 21rem;
+    top: 23rem;
+      left:4vw;
     }}
    
 
