--- a/style.css
+++ b/style.css
@@ -208,8 +208,16 @@ text-align: center;
   }
 }
 @media (max-width: 770px) {
+.po{
+display: flex;
+align-items: center;
+justify-content: center;
+
+
+}
 .content{
-    margin: 58% 0%;}
+    position: relative;
+    top:10rem ;}
     .por{
         font-size: clamp(3rem, 23vw, 10rem);
         color: transparent;
