--- a/style.css
+++ b/style.css
@@ -132,6 +132,14 @@ margin-left: 5rem;
     border-bottom: 2px solid rgb(216, 120, 18);
     
 }
+.po{
+width: 100%;
+height: 100%;
+
+display: flex;
+align-items: center;
+justify-content: center;
+}
 .content{
 width: 100vw;
 overflow: hidden;
@@ -208,8 +216,16 @@ text-align: center;
   }
 }
 @media (max-width: 770px) {
+.po{
+display: flex;
+align-items: center;
+justify-content: center;
+
+
+}
 .content{
-    margin: 34% 0%;}
+    position: relative;
+    top:10rem ;}
     .por{
         font-size: clamp(3rem, 23vw, 10rem);
         color: transparent;
@@ -303,6 +319,7 @@ font-size: 1.2rem;
    }
   }
   @media (max-width:430px) {
+
     .th{
         display: flex;
         position: absolute;
@@ -313,11 +330,7 @@ font-size: 1.2rem;
         
     }
   
-    .por{
-    position: absolute;
-    top: 21rem;
-    left: 4.1vw;
-    }}
+   }
    
 
 @media (max-width:320px) {
@@ -332,7 +345,7 @@ font-size: 1.2rem;
   }
   .por{
   position: absolute;
-    top: 39%;
+    top: 35%;
   }
  
    
