--- a/style.css
+++ b/style.css
@@ -39,7 +39,7 @@ body {
    
 }
 .main{
-background-color: rgb(249, 236, 236);
+background-color: rgb(241, 242, 238);
   
   width: 100vw;
   height: 100vh;
@@ -140,6 +140,12 @@ display: flex;
 align-items: center;
 justify-content: center;
 }
+.po h2{
+font-size: 3rem;
+font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+font-weight: 600;
+
+}
 .content{
 width: 100vw;
 overflow: hidden;
@@ -175,7 +181,8 @@ text-align: center;
   color: #fff;
   border: none;
   border-radius: 50%;
-  cursor: pointer;}
+  cursor: pointer;
+  }
 
 .menu{
 
@@ -450,7 +457,7 @@ font-size: 1.2rem;
     .about{
   width: 100vw;
   height: auto;
-  background-color: rgb(249, 236, 236);
+  background-color: rgb(241, 242, 238);
   
   
   
@@ -473,6 +480,9 @@ font-size: 1.2rem;
   background-size: cover;
   height: 30rem;
   border-radius: 50%;
+  animation: cards1 5s ease-in-out forwards;;
+  animation-timeline: view();
+  animation-range: entry 0% cover 40%;
   
   }
    .part2{
@@ -486,12 +496,13 @@ font-size: 1.2rem;
   justify-content: center;
   align-items: center;
   flex-wrap: wrap;
+  animation: cards 5s ease-in-out forwards;;
+  animation-timeline: view();
+  animation-range: entry 0% cover 40%;
   }
   .part2 h2{
   font-size: 2rem;
-  color: transparent;
-  
-  -webkit-text-stroke: 1.6px rgba(59, 61, 61, 0.831); /* thoda bold stroke */
+  color: black /* thoda bold stroke */
   
   
   }
@@ -525,6 +536,9 @@ opacity: 0;
   flex: 1 1 120px;           /* ye allow karta hai items ko wrap hone */
   display: flex;
   justify-content: center;
+  animation: cards2 5s ease-in-out forwards;;
+  animation-timeline: view();
+  animation-range: entry 0% cover 40%;
 }
 
 .img1 img {
@@ -603,19 +617,21 @@ opacity: 0;
 .projects{
 width: 100vw;
 height: 100vh;
-background-color: rgb(249, 236, 236);
+background-color: rgb(241, 242, 238);
 text-align: center;
 }
 
 .probig{
 width: 100%;
 height: 90vh;
-background-color: rgb(249, 236, 236);
+background-color: rgb(241, 242, 238);
 display: flex;
 align-items: center;
 justify-content: space-between;
 overflow: hidden;
-
+animation: cards2 5s ease-in-out forwards;;
+  animation-timeline: view();
+  animation-range: entry 0% cover 40%;
 }
 .pro{
 width: auto;
@@ -626,33 +642,49 @@ gap: 2REM;
 
 
 }
-
+.h111{
+animation: cards2 5s ease-in-out forwards;;
+  animation-timeline: view();
+  animation-range: entry 0% cover 40%;
+}
+.p2{
+animation: cards2 5s ease-in-out forwards;;
+  animation-timeline: view();
+  animation-range: entry 0% cover 40%;
+}
 .card2{
  border-radius: 10px;
 width: 20rem;
+display: grid;
+align-items: center;
 height: 20rem;
 background-color: rgb(219, 216, 216);
+box-shadow: 3px 4px 8px black;
 
 }
-.pro2{
-width: auto;
-display: flex;
-margin-left: 2rem;
-gap: 2REM;
+.pro2 {
+  width: auto;
+  display: flex;
+  margin-left: 2rem;
+  gap: 2rem;
+  height: auto;
 
-height: auto;
-
-
+  
 }
 
-.card3{
- 
-width: 20rem;
-height: 20rem;
-background-color: black;
-border-radius: 10px;
-
+.card3 {
+  display: grid;
+  place-items: center;
+  width: 20rem;
+  height: 20rem;
+  background-color: rgb(219, 216, 216);
+  border-radius: 10px;
+  box-shadow: 3px 4px 8px black;
 }
+
+
+
+
 @media (max-width:1361px) {
   .probig{
   flex-direction: column;
@@ -677,7 +709,7 @@ border-radius: 10px;
 .contact{
 width: 100vw;
 height: 100vh;
-background-color: rgb(249, 236, 236);
+background-color: rgb(241, 242, 238);
  display: grid;
   align-items: center;
   justify-content: center;
@@ -687,6 +719,11 @@ width: 50vw;
 height: auto;
 background-color: rgb(156, 219, 198);
 z-index: 1;
+border-radius: 23px;
+
+animation: cards3 5s ease-in-out forwards;;
+  animation-timeline: view();
+  animation-range: entry 0% cover 40%;
 
 }
 .con-box{
@@ -700,6 +737,9 @@ border-radius: 10px;
 display: grid;
 align-items: center;
 justify-content: center;
+animation: cards2 5s ease-in-out forwards;;
+  animation-timeline: view();
+  animation-range: entry 0% cover 40%;
 
 }
 
@@ -763,3 +803,41 @@ transition: 1s ease-in-out;
   width: auto;
   }
 }
+
+@keyframes cards {
+  from {
+   transform: translateX(260px);
+    opacity: 0;
+  }
+  to {
+    transform: translateX(0);
+    opacity: 1;
+  }
+}
+@keyframes cards1 {
+  from {
+   transform: translateX(-260px);
+    opacity: 0;
+  }
+  to {
+    transform: translateX(0);
+    opacity: 1;
+  }}
+  @keyframes cards2 {
+  from {
+   scale:0.4;
+    opacity: 0;
+  }
+  to {
+    scale:1;
+    opacity: 1;
+  }}
+  @keyframes cards3 {
+  from {
+   transform: translateX(-260px);
+    opacity: 0;
+  }
+  to {
+    transform: translateX(0);
+    opacity: 1;
+  }}
